--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,5 +4,6 @@ language:
     chapter_name: "Lesson "
 delete_merged_file: true
 rmd_files: ["index.Rmd", "counting.Rmd", "factorial.Rmd", "box-models.Rmd",
-            "replacement.Rmd", "double-counting.Rmd", "conditional.Rmd", "independence.Rmd"]
+            "replacement.Rmd", "double-counting.Rmd", "conditional.Rmd", "independence.Rmd",
+            "total-probability.Rmd", "bayes.Rmd"]
 output_dir: "docs"
