--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,5 +5,5 @@ language:
 delete_merged_file: true
 rmd_files: ["index.Rmd", "counting.Rmd", "factorial.Rmd", "box-models.Rmd",
             "replacement.Rmd", "double-counting.Rmd", "conditional.Rmd", "independence.Rmd",
-            "total-probability.Rmd", "bayes.Rmd"]
+            "total-probability.Rmd", "bayes.Rmd", "random-variables.Rmd", "cdf.Rmd"]
 output_dir: "docs"
