--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,8 +3,10 @@ language:
   ui:
     chapter_name: "Lesson "
 delete_merged_file: true
-rmd_files: ["index.Rmd", "counting.Rmd", "factorial.Rmd", "box-models.Rmd",
-            "replacement.Rmd", "double-counting.Rmd", "conditional.Rmd", "independence.Rmd",
-            "total-probability.Rmd", "bayes.Rmd", "random-variables.Rmd", "cdf.Rmd",
-            "hypergeometric.Rmd", "binomial.Rmd", "geometric.Rmd", "negative-binomial.Rmd"]
+rmd_files: [
+  "index.Rmd", "counting.Rmd", "factorial.Rmd", "box-models.Rmd", "replacement.Rmd", "double-counting.Rmd",
+  "conditional.Rmd", "independence.Rmd", "total-probability.Rmd", "bayes.Rmd", "random-variables.Rmd", "cdf.Rmd",
+  "hypergeometric.Rmd", "binomial.Rmd", "geometric.Rmd", "negative-binomial.Rmd", "poisson.Rmd",
+  "poisson-process.Rmd", "joint-distributions.Rmd"
+]
 output_dir: "docs"
