--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,6 +7,7 @@ rmd_files: [
   "index.Rmd", "counting.Rmd", "factorial.Rmd", "box-models.Rmd", "replacement.Rmd", "double-counting.Rmd",
   "conditional.Rmd", "independence.Rmd", "total-probability.Rmd", "bayes.Rmd", "random-variables.Rmd", "cdf.Rmd",
   "hypergeometric.Rmd", "binomial.Rmd", "geometric.Rmd", "negative-binomial.Rmd", "poisson.Rmd",
-  "poisson-process.Rmd", "joint-distributions.Rmd", "marginal-distributions.Rmd", "conditional-distributions.Rmd"
+  "poisson-process.Rmd", "joint-distributions.Rmd", "marginal-distributions.Rmd", "conditional-distributions.Rmd",
+  "sums-discrete.Rmd"
 ]
 output_dir: "docs"
