--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,6 +9,7 @@ rmd_files: [
   "conditional.Rmd", "independence.Rmd", "total-probability.Rmd", "bayes.Rmd", "random-variables.Rmd", "cdf.Rmd",
   "hypergeometric.Rmd", "binomial.Rmd", "geometric.Rmd", "negative-binomial.Rmd", "poisson.Rmd",
   "poisson-process.Rmd", "joint-distributions.Rmd", "marginal-distributions.Rmd", "conditional-distributions.Rmd",
-  "sums-discrete.Rmd", "expected-value.Rmd", "ev-infinity.Rmd", "lotus.Rmd", "lotus2d.Rmd"
+  "sums-discrete.Rmd", "expected-value.Rmd", "ev-infinity.Rmd", "lotus.Rmd", "lotus2d.Rmd",
+  "linearity.Rmd", "ev-product.Rmd"
 ]
 output_dir: "docs"
