--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -15,6 +15,8 @@ rmd_files: [
   "ev-continuous.Rmd", "lotus-continuous.Rmd", "var-continuous.Rmd", "normal.Rmd",
   "joint-continuous.Rmd", "marginal-continuous.Rmd", "ev-joint-continuous.Rmd", "cov-continuous.Rmd",
   "sums-continuous.Rmd", "clt.Rmd", "random-process.Rmd", "random-process-examples.Rmd",
-  "brownian-motion.Rmd", "mean-function.Rmd", "var-function.Rmd"
+  "brownian-motion.Rmd", "mean-function.Rmd", "var-function.Rmd", "cov-function.Rmd", "stationary.Rmd",
+  "autocorrelation.Rmd", "power.Rmd", "psd.Rmd", "lti-time.Rmd", #"lti-frequency.Rmd",
+  "distribution-table.Rmd", "fourier-table.Rmd"
 ]
 output_dir: "docs"
