--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -16,7 +16,7 @@ rmd_files: [
   "joint-continuous.Rmd", "marginal-continuous.Rmd", "ev-joint-continuous.Rmd", "cov-continuous.Rmd",
   "sums-continuous.Rmd", "clt.Rmd", "random-process.Rmd", "random-process-examples.Rmd",
   "brownian-motion.Rmd", "mean-function.Rmd", "var-function.Rmd", "cov-function.Rmd", "stationary.Rmd",
-  "autocorrelation.Rmd", "power.Rmd", "psd.Rmd", "lti-time.Rmd", #"lti-frequency.Rmd",
+  "autocorrelation.Rmd", "power.Rmd", "psd.Rmd", "lti-time.Rmd", "lti-frequency.Rmd",
   "distribution-table.Rmd", "complex.Rmd", "fourier.Rmd", "fourier-table.Rmd"
 ]
 output_dir: "docs"
